Terraform/AWS/VPC/network_interface.tf
# Create a network interface
resource "aws_network_interface" "network_interface" {
  subnet_id       = aws_subnet.subnet.id
  security_groups = [aws_security_group.security_group.id]
}
